Updated decoder input data, updated parameter search space

--- a/11. Generating third order datasets.ipynb
+++ b/11. Generating third order datasets.ipynb
@@ -27,9 +27,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -114,8 +114,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.0000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>2.009019</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.6206</td>\n",
@@ -138,8 +138,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.0000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.804491</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.6206</td>\n",
@@ -162,8 +162,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.0000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.521727</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.6206</td>\n",
@@ -186,8 +186,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.0000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.337316</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.6206</td>\n",
@@ -210,8 +210,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.0000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.093670</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.6206</td>\n",
@@ -221,129 +221,9 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2011-09-13 23:00:00</th>\n",
-       "      <td>0.024063</td>\n",
-       "      <td>1.240560</td>\n",
-       "      <td>0.370590</td>\n",
-       "      <td>0.982963</td>\n",
-       "      <td>0.900969</td>\n",
-       "      <td>0.801938</td>\n",
-       "      <td>0.900969</td>\n",
-       "      <td>0.801938</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.878524</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.6206</td>\n",
-       "      <td>0.084801</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2011-09-14 00:00:00</th>\n",
-       "      <td>-0.052424</td>\n",
-       "      <td>1.177626</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.356896</td>\n",
-       "      <td>0.900969</td>\n",
-       "      <td>0.801938</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.815936</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.6206</td>\n",
-       "      <td>0.062043</td>\n",
-       "      <td>0.152671</td>\n",
-       "      <td>0.859670</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2011-09-14 01:00:00</th>\n",
-       "      <td>-0.216700</td>\n",
-       "      <td>1.052516</td>\n",
-       "      <td>0.629410</td>\n",
-       "      <td>0.982963</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.356896</td>\n",
-       "      <td>0.900969</td>\n",
-       "      <td>0.801938</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.701937</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.6206</td>\n",
-       "      <td>0.038472</td>\n",
-       "      <td>0.960252</td>\n",
-       "      <td>0.695366</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2011-09-14 02:00:00</th>\n",
-       "      <td>-0.436196</td>\n",
-       "      <td>0.846731</td>\n",
-       "      <td>0.750000</td>\n",
-       "      <td>0.933013</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.356896</td>\n",
-       "      <td>0.900969</td>\n",
-       "      <td>0.801938</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.615878</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.6206</td>\n",
-       "      <td>0.023300</td>\n",
-       "      <td>0.877355</td>\n",
-       "      <td>0.171970</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2011-09-14 03:00:00</th>\n",
-       "      <td>-0.581591</td>\n",
-       "      <td>0.724045</td>\n",
-       "      <td>0.853553</td>\n",
-       "      <td>0.853553</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.356896</td>\n",
-       "      <td>0.900969</td>\n",
-       "      <td>0.801938</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.28674</td>\n",
-       "      <td>0.8115</td>\n",
-       "      <td>0.433144</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.6206</td>\n",
-       "      <td>0.027093</td>\n",
-       "      <td>0.877355</td>\n",
-       "      <td>0.171970</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10 rows × 23 columns</p>\n",
+       "<p>5 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -354,11 +234,6 @@
        "2011-09-13 20:00:00 -0.468705  0.821216  0.066987  0.750000     0.900969   \n",
        "2011-09-13 21:00:00  0.390181  1.594060  0.146447  0.853553     0.900969   \n",
        "2011-09-13 22:00:00  0.616925  1.795114  0.250000  0.933013     0.900969   \n",
-       "2011-09-13 23:00:00  0.024063  1.240560  0.370590  0.982963     0.900969   \n",
-       "2011-09-14 00:00:00 -0.052424  1.177626  0.500000  1.000000     1.000000   \n",
-       "2011-09-14 01:00:00 -0.216700  1.052516  0.629410  0.982963     1.000000   \n",
-       "2011-09-14 02:00:00 -0.436196  0.846731  0.750000  0.933013     1.000000   \n",
-       "2011-09-14 03:00:00 -0.581591  0.724045  0.853553  0.853553     1.000000   \n",
        "\n",
        "                     weekday_cos  month_sin  month_cos  weekend  holiday  ...  \\\n",
        "Timestamp                                                                 ...   \n",
@@ -367,24 +242,14 @@
        "2011-09-13 20:00:00     0.801938   0.900969   0.801938      0.0      0.0  ...   \n",
        "2011-09-13 21:00:00     0.801938   0.900969   0.801938      0.0      0.0  ...   \n",
        "2011-09-13 22:00:00     0.801938   0.900969   0.801938      0.0      0.0  ...   \n",
-       "2011-09-13 23:00:00     0.801938   0.900969   0.801938      0.0      0.0  ...   \n",
-       "2011-09-14 00:00:00     0.356896   0.900969   0.801938      0.0      0.0  ...   \n",
-       "2011-09-14 01:00:00     0.356896   0.900969   0.801938      0.0      0.0  ...   \n",
-       "2011-09-14 02:00:00     0.356896   0.900969   0.801938      0.0      0.0  ...   \n",
-       "2011-09-14 03:00:00     0.356896   0.900969   0.801938      0.0      0.0  ...   \n",
        "\n",
        "                     precip_intensity  precip_probability  temperature  \\\n",
        "Timestamp                                                                \n",
-       "2011-09-13 18:00:00           0.00000              0.0000     2.009019   \n",
-       "2011-09-13 19:00:00           0.00000              0.0000     1.804491   \n",
-       "2011-09-13 20:00:00           0.00000              0.0000     1.521727   \n",
-       "2011-09-13 21:00:00           0.00000              0.0000     1.337316   \n",
-       "2011-09-13 22:00:00           0.00000              0.0000     1.093670   \n",
-       "2011-09-13 23:00:00           0.00000              0.0000     0.878524   \n",
-       "2011-09-14 00:00:00           0.00000              0.0000     0.815936   \n",
-       "2011-09-14 01:00:00           0.00000              0.0000     0.701937   \n",
-       "2011-09-14 02:00:00           0.00000              0.0000     0.615878   \n",
-       "2011-09-14 03:00:00           0.28674              0.8115     0.433144   \n",
+       "2011-09-13 18:00:00               0.0                 0.0     2.009019   \n",
+       "2011-09-13 19:00:00               0.0                 0.0     1.804491   \n",
+       "2011-09-13 20:00:00               0.0                 0.0     1.521727   \n",
+       "2011-09-13 21:00:00               0.0                 0.0     1.337316   \n",
+       "2011-09-13 22:00:00               0.0                 0.0     1.093670   \n",
        "\n",
        "                     uv_index  visibility  wind_speed  wind_bearing_sin  \\\n",
        "Timestamp                                                                 \n",
@@ -393,11 +258,6 @@
        "2011-09-13 20:00:00       0.0      0.6206    0.218640          0.719186   \n",
        "2011-09-13 21:00:00       0.0      0.6206    0.091574          0.328990   \n",
        "2011-09-13 22:00:00       0.0      0.6206    0.087781          0.430413   \n",
-       "2011-09-13 23:00:00       0.0      0.6206    0.084801          0.500000   \n",
-       "2011-09-14 00:00:00       0.0      0.6206    0.062043          0.152671   \n",
-       "2011-09-14 01:00:00       0.0      0.6206    0.038472          0.960252   \n",
-       "2011-09-14 02:00:00       0.0      0.6206    0.023300          0.877355   \n",
-       "2011-09-14 03:00:00       0.0      0.6206    0.027093          0.877355   \n",
        "\n",
        "                     wind_bearing_cos  PM10_missing  PM25_missing  \n",
        "Timestamp                                                          \n",
@@ -406,22 +266,17 @@
        "2011-09-13 20:00:00          0.949397           0.0           0.0  \n",
        "2011-09-13 21:00:00          0.969846           0.0           0.0  \n",
        "2011-09-13 22:00:00          0.995134           0.0           0.0  \n",
-       "2011-09-13 23:00:00          1.000000           0.0           0.0  \n",
-       "2011-09-14 00:00:00          0.859670           0.0           0.0  \n",
-       "2011-09-14 01:00:00          0.695366           0.0           0.0  \n",
-       "2011-09-14 02:00:00          0.171970           0.0           0.0  \n",
-       "2011-09-14 03:00:00          0.171970           0.0           0.0  \n",
        "\n",
-       "[10 rows x 23 columns]"
+       "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_train.head(10)"
+    "df_train.head()"
    ]
   },
   {
@@ -430,65 +285,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def build_recurrent_datasets(dataset, mode, history = 24, target_size = 12):\n",
-    "    look_back = history - 1\n",
-    "    start_index = look_back\n",
+    "def build_seq2seq_datasets(dataset, mode, history = 24, target_size = 12):\n",
+    "    start_index = history\n",
     "    end_index = len(dataset) - target_size\n",
     "    X = dataset.values.copy()\n",
     "    y = dataset[['PM10', 'PM10_missing']].values.copy()\n",
     "\n",
-    "    data = []\n",
-    "    labels = []\n",
+    "    encoder_input_data = []\n",
+    "    decoder_input_data = []\n",
+    "    decoder_target_data = []\n",
     "    \n",
     "    for i in range(start_index, end_index):\n",
-    "        sample_x = X[i-look_back:i+1]\n",
-    "        sample_y = y[i+1:i+1+target_size]\n",
+    "        encoder_input = X[i-history:i]\n",
+    "        decoder_input = X[i:i+target_size]\n",
+    "        decoder_output = y[i+1:i+1+target_size]\n",
     "        \n",
     "        # If we are building a test/validation set and any of the \n",
     "        # target values has been imputed, then we discard the sample\n",
-    "        if mode == 'evaluating' and np.any(sample_y[:, 1] == 1):\n",
+    "        if mode == 'evaluating' and np.any(decoder_output[:, 1] == 1):\n",
     "            continue\n",
     "            \n",
-    "        data.append(sample_x)\n",
-    "        labels.append(sample_y)\n",
+    "        encoder_input_data.append(encoder_input)\n",
+    "        decoder_input_data.append(decoder_input)\n",
+    "        decoder_target_data.append(decoder_output)\n",
     "\n",
-    "    data = np.array(data).reshape(-1, history, X.shape[1])\n",
-    "    labels = np.array(labels).reshape(-1, target_size, y.shape[1])\n",
-    "    \n",
-    "    assert data.shape[0] == labels.shape[0]\n",
-    "\n",
-    "    return data, labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train, y_train = build_recurrent_datasets(df_train, mode='training')\n",
-    "X_valid, y_valid = build_recurrent_datasets(df_valid, mode='evaluating')\n",
-    "X_test, y_test = build_recurrent_datasets(df_test, mode='evaluating')"
+    "    encoder_input_data = np.array(encoder_input_data).reshape(-1, history, X.shape[1])\n",
+    "    decoder_input_data = np.array(decoder_input_data).reshape(-1, target_size, X.shape[1])\n",
+    "    decoder_target_data = np.array(decoder_target_data).reshape(-1, target_size, y.shape[1])\n",
+    "        \n",
+    "    return encoder_input_data, decoder_input_data, decoder_target_data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3389, 24, 23)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "X_valid.shape"
+    "train_encoder_input_data, train_decoder_input_data, train_decoder_target_data = \\\n",
+    "        build_seq2seq_datasets(df_train, mode='training')\n",
+    "\n",
+    "valid_encoder_input_data, valid_decoder_input_data, valid_decoder_target_data = \\\n",
+    "        build_seq2seq_datasets(df_valid, mode='evaluating')\n",
+    "\n",
+    "test_encoder_input_data, test_decoder_input_data, test_decoder_target_data = \\\n",
+    "        build_seq2seq_datasets(df_test, mode='evaluating')"
    ]
   },
   {
@@ -497,13 +338,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save('./data/third-order/X_train.npy', X_train)\n",
-    "np.save('./data/third-order/y_train.npy', y_train)\n",
-    "np.save('./data/third-order/X_valid.npy', X_valid)\n",
-    "np.save('./data/third-order/y_valid.npy', y_valid)\n",
-    "np.save('./data/third-order/X_test.npy', X_test)\n",
-    "np.save('./data/third-order/y_test.npy', y_test)"
+    "np.save('./data/third-order/seq2seq/train_encoder_input_data.npy', train_encoder_input_data)\n",
+    "np.save('./data/third-order/seq2seq/train_decoder_input_data.npy', train_decoder_input_data)\n",
+    "np.save('./data/third-order/seq2seq/train_decoder_target_data.npy', train_decoder_target_data)\n",
+    "\n",
+    "np.save('./data/third-order/seq2seq/valid_encoder_input_data.npy', valid_encoder_input_data)\n",
+    "np.save('./data/third-order/seq2seq/valid_decoder_input_data.npy', valid_decoder_input_data)\n",
+    "np.save('./data/third-order/seq2seq/valid_decoder_target_data.npy', valid_decoder_target_data)\n",
+    "\n",
+    "np.save('./data/third-order/seq2seq/test_encoder_input_data.npy', test_encoder_input_data)\n",
+    "np.save('./data/third-order/seq2seq/test_decoder_input_data.npy', test_decoder_input_data)\n",
+    "np.save('./data/third-order/seq2seq/test_decoder_target_data.npy', test_decoder_target_data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
