--- a/11. Generating third order datasets.ipynb
+++ b/11. Generating third order datasets.ipynb
@@ -29,7 +29,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -281,24 +281,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def build_seq2seq_datasets(dataset, mode, history = 24, target_size = 12):\n",
     "    start_index = history\n",
     "    end_index = len(dataset) - target_size\n",
-    "    X = dataset.values.copy()\n",
-    "    y = dataset[['PM10', 'PM10_missing']].values.copy()\n",
+    "    \n",
+    "    # Selecting the appropriate columns from the dataset\n",
+    "    encoder_input_dataset = dataset.values.copy()\n",
+    "    decoder_input_dataset = dataset.drop(['PM10_missing', 'PM25_missing'], axis=1).values.copy()\n",
+    "    decoder_target_dataset = dataset[['PM10', 'PM10_missing']].values.copy()\n",
     "\n",
+    "    # These lists will hold the final (third-order) datasets\n",
     "    encoder_input_data = []\n",
     "    decoder_input_data = []\n",
     "    decoder_target_data = []\n",
     "    \n",
     "    for i in range(start_index, end_index):\n",
-    "        encoder_input = X[i-history:i]\n",
-    "        decoder_input = X[i:i+target_size]\n",
-    "        decoder_output = y[i+1:i+1+target_size]\n",
+    "        encoder_input = encoder_input_dataset[i-history:i]\n",
+    "        decoder_input = decoder_input_dataset[i:i+target_size]\n",
+    "        decoder_output = decoder_target_dataset[i+1:i+1+target_size]\n",
     "        \n",
     "        # If we are building a test/validation set and any of the \n",
     "        # target values has been imputed, then we discard the sample\n",
@@ -309,9 +313,15 @@
     "        decoder_input_data.append(decoder_input)\n",
     "        decoder_target_data.append(decoder_output)\n",
     "\n",
-    "    encoder_input_data = np.array(encoder_input_data).reshape(-1, history, X.shape[1])\n",
-    "    decoder_input_data = np.array(decoder_input_data).reshape(-1, target_size, X.shape[1])\n",
-    "    decoder_target_data = np.array(decoder_target_data).reshape(-1, target_size, y.shape[1])\n",
+    "    encoder_input_data = np.array(encoder_input_data).reshape(-1, \n",
+    "                                                              history, \n",
+    "                                                              encoder_input_dataset.shape[1])\n",
+    "    decoder_input_data = np.array(decoder_input_data).reshape(-1, \n",
+    "                                                              target_size, \n",
+    "                                                              decoder_input_dataset.shape[1])\n",
+    "    decoder_target_data = np.array(decoder_target_data).reshape(-1, \n",
+    "                                                                target_size, \n",
+    "                                                                decoder_target_dataset.shape[1])\n",
     "        \n",
     "    return encoder_input_data, decoder_input_data, decoder_target_data"
    ]
@@ -334,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
