--- a/12. modeling.ipynb
+++ b/12. modeling.ipynb
@@ -99,11 +99,7 @@
     "\n",
     "valid_encoder_input_data = np.load('./data/third-order/Centar/valid_encoder_input_data.npy')\n",
     "valid_decoder_input_data = np.load('./data/third-order/Centar/valid_decoder_input_data.npy')\n",
-    "valid_decoder_target_data = np.load('./data/third-order/Centar/valid_decoder_target_data.npy')\n",
-    "\n",
-    "test_encoder_input_data = np.load('./data/third-order/Centar/test_encoder_input_data.npy')\n",
-    "test_decoder_input_data = np.load('./data/third-order/Centar/test_decoder_input_data.npy')\n",
-    "test_decoder_target_data = np.load('./data/third-order/Centar/test_decoder_target_data.npy')"
+    "valid_decoder_target_data = np.load('./data/third-order/Centar/valid_decoder_target_data.npy')"
    ]
   },
   {
@@ -306,6 +302,75 @@
     "             callbacks=[EarlyStopping(monitor='val_loss', \n",
     "                                      patience=patience, \n",
     "                                      verbose=1)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tuner.results_summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Attentive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# due to the model architecture, we need to transform the output shape and type\n",
+    "train_attentive_decoder_target_data = list(np.swapaxes(train_decoder_target_data, 0, 1))\n",
+    "valid_attentive_decoder_target_data = list(np.swapaxes(valid_decoder_target_data, 0, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "model_builder = AttentiveSeq2Seq(Tx, Ty, encoder_input_dim, decoder_input_dim,\n",
+    "                                decoder_output_dim)\n",
+    "tuner = RandomSearch(model_builder,\n",
+    "                     objective='val_loss',\n",
+    "                     max_trials=max_trials,\n",
+    "                     executions_per_trial=executions_per_trial,\n",
+    "                     directory='local-keras-tuner', \n",
+    "                     project_name='attentive')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "tuner.search(x=[train_encoder_input_data, \n",
+    "                train_decoder_input_data], \n",
+    "             y=train_attentive_decoder_target_data,\n",
+    "             validation_data=([\n",
+    "                valid_encoder_input_data,\n",
+    "                valid_decoder_input_data],\n",
+    "                valid_attentive_decoder_target_data),\n",
+    "             batch_size=batch_size,\n",
+    "             epochs=epochs,\n",
+    "             verbose=0,\n",
+    "             callbacks=[EarlyStopping(monitor='val_loss', \n",
+    "                                      patience=patience, \n",
+    "                                      verbose=1),\n",
+    "                        LossPrintingCallback(Ty)])"
    ]
   },
   {
