Switched to standard mse

--- a/11. Generating third order datasets.ipynb
+++ b/11. Generating third order datasets.ipynb
@@ -28,271 +28,18 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PM10</th>\n",
-       "      <th>PM25</th>\n",
-       "      <th>hour_sin</th>\n",
-       "      <th>hour_cos</th>\n",
-       "      <th>weekday_sin</th>\n",
-       "      <th>weekday_cos</th>\n",
-       "      <th>month_sin</th>\n",
-       "      <th>month_cos</th>\n",
-       "      <th>weekend</th>\n",
-       "      <th>holiday</th>\n",
-       "      <th>...</th>\n",
-       "      <th>precip_intensity</th>\n",
-       "      <th>precip_probability</th>\n",
-       "      <th>temperature</th>\n",
-       "      <th>uv_index</th>\n",
-       "      <th>visibility</th>\n",
-       "      <th>wind_speed</th>\n",
-       "      <th>wind_bearing_sin</th>\n",
-       "      <th>wind_bearing_cos</th>\n",
-       "      <th>PM10_missing</th>\n",
-       "      <th>PM25_missing</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Timestamp</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2011-09-13 18:00:00</th>\n",
-       "      <td>-0.330611</td>\n",
-       "      <td>0.856226</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.900969</td>\n",
-       "      <td>0.801938</td>\n",
-       "      <td>0.900969</td>\n",
-       "      <td>0.801938</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.009019</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.6206</td>\n",
-       "      <td>0.225955</td>\n",
-       "      <td>0.620961</td>\n",
-       "      <td>0.985148</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2011-09-13 19:00:00</th>\n",
-       "      <td>-0.408947</td>\n",
-       "      <td>0.890166</td>\n",
-       "      <td>0.017037</td>\n",
-       "      <td>0.629410</td>\n",
-       "      <td>0.900969</td>\n",
-       "      <td>0.801938</td>\n",
-       "      <td>0.900969</td>\n",
-       "      <td>0.801938</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.804491</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.6206</td>\n",
-       "      <td>0.264156</td>\n",
-       "      <td>0.569587</td>\n",
-       "      <td>0.995134</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2011-09-13 20:00:00</th>\n",
-       "      <td>-0.468705</td>\n",
-       "      <td>0.821216</td>\n",
-       "      <td>0.066987</td>\n",
-       "      <td>0.750000</td>\n",
-       "      <td>0.900969</td>\n",
-       "      <td>0.801938</td>\n",
-       "      <td>0.900969</td>\n",
-       "      <td>0.801938</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.521727</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.6206</td>\n",
-       "      <td>0.218640</td>\n",
-       "      <td>0.719186</td>\n",
-       "      <td>0.949397</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2011-09-13 21:00:00</th>\n",
-       "      <td>0.390181</td>\n",
-       "      <td>1.594060</td>\n",
-       "      <td>0.146447</td>\n",
-       "      <td>0.853553</td>\n",
-       "      <td>0.900969</td>\n",
-       "      <td>0.801938</td>\n",
-       "      <td>0.900969</td>\n",
-       "      <td>0.801938</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.337316</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.6206</td>\n",
-       "      <td>0.091574</td>\n",
-       "      <td>0.328990</td>\n",
-       "      <td>0.969846</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2011-09-13 22:00:00</th>\n",
-       "      <td>0.616925</td>\n",
-       "      <td>1.795114</td>\n",
-       "      <td>0.250000</td>\n",
-       "      <td>0.933013</td>\n",
-       "      <td>0.900969</td>\n",
-       "      <td>0.801938</td>\n",
-       "      <td>0.900969</td>\n",
-       "      <td>0.801938</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.093670</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.6206</td>\n",
-       "      <td>0.087781</td>\n",
-       "      <td>0.430413</td>\n",
-       "      <td>0.995134</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 23 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                         PM10      PM25  hour_sin  hour_cos  weekday_sin  \\\n",
-       "Timestamp                                                                  \n",
-       "2011-09-13 18:00:00 -0.330611  0.856226  0.000000  0.500000     0.900969   \n",
-       "2011-09-13 19:00:00 -0.408947  0.890166  0.017037  0.629410     0.900969   \n",
-       "2011-09-13 20:00:00 -0.468705  0.821216  0.066987  0.750000     0.900969   \n",
-       "2011-09-13 21:00:00  0.390181  1.594060  0.146447  0.853553     0.900969   \n",
-       "2011-09-13 22:00:00  0.616925  1.795114  0.250000  0.933013     0.900969   \n",
-       "\n",
-       "                     weekday_cos  month_sin  month_cos  weekend  holiday  ...  \\\n",
-       "Timestamp                                                                 ...   \n",
-       "2011-09-13 18:00:00     0.801938   0.900969   0.801938      0.0      0.0  ...   \n",
-       "2011-09-13 19:00:00     0.801938   0.900969   0.801938      0.0      0.0  ...   \n",
-       "2011-09-13 20:00:00     0.801938   0.900969   0.801938      0.0      0.0  ...   \n",
-       "2011-09-13 21:00:00     0.801938   0.900969   0.801938      0.0      0.0  ...   \n",
-       "2011-09-13 22:00:00     0.801938   0.900969   0.801938      0.0      0.0  ...   \n",
-       "\n",
-       "                     precip_intensity  precip_probability  temperature  \\\n",
-       "Timestamp                                                                \n",
-       "2011-09-13 18:00:00               0.0                 0.0     2.009019   \n",
-       "2011-09-13 19:00:00               0.0                 0.0     1.804491   \n",
-       "2011-09-13 20:00:00               0.0                 0.0     1.521727   \n",
-       "2011-09-13 21:00:00               0.0                 0.0     1.337316   \n",
-       "2011-09-13 22:00:00               0.0                 0.0     1.093670   \n",
-       "\n",
-       "                     uv_index  visibility  wind_speed  wind_bearing_sin  \\\n",
-       "Timestamp                                                                 \n",
-       "2011-09-13 18:00:00       0.0      0.6206    0.225955          0.620961   \n",
-       "2011-09-13 19:00:00       0.0      0.6206    0.264156          0.569587   \n",
-       "2011-09-13 20:00:00       0.0      0.6206    0.218640          0.719186   \n",
-       "2011-09-13 21:00:00       0.0      0.6206    0.091574          0.328990   \n",
-       "2011-09-13 22:00:00       0.0      0.6206    0.087781          0.430413   \n",
-       "\n",
-       "                     wind_bearing_cos  PM10_missing  PM25_missing  \n",
-       "Timestamp                                                          \n",
-       "2011-09-13 18:00:00          0.985148           0.0           0.0  \n",
-       "2011-09-13 19:00:00          0.995134           0.0           0.0  \n",
-       "2011-09-13 20:00:00          0.949397           0.0           0.0  \n",
-       "2011-09-13 21:00:00          0.969846           0.0           0.0  \n",
-       "2011-09-13 22:00:00          0.995134           0.0           0.0  \n",
-       "\n",
-       "[5 rows x 23 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_train.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def build_seq2seq_datasets(dataset, mode, history = 24, target_size = 12):\n",
+    "def build_seq2seq_datasets(dataset, history = 24, target_size = 12):\n",
     "    start_index = history\n",
     "    end_index = len(dataset) - target_size\n",
     "    \n",
     "    # Selecting the appropriate columns from the dataset\n",
     "    encoder_input_dataset = dataset.values.copy()\n",
     "    decoder_input_dataset = dataset.drop(['PM10_missing', 'PM25_missing'], axis=1).values.copy()\n",
-    "    decoder_target_dataset = dataset[['PM10', 'PM10_missing']].values.copy()\n",
+    "    decoder_target_dataset = dataset[['PM10']].values.copy()\n",
+    "    decoder_missing_dataset = dataset[['PM10_missing']].values.copy()\n",
     "\n",
     "    # These lists will hold the final (third-order) datasets\n",
     "    encoder_input_data = []\n",
@@ -300,18 +47,18 @@
     "    decoder_target_data = []\n",
     "    \n",
     "    for i in range(start_index, end_index):\n",
-    "        encoder_input = encoder_input_dataset[i-history:i]\n",
-    "        decoder_input = decoder_input_dataset[i:i+target_size]\n",
-    "        decoder_output = decoder_target_dataset[i+1:i+1+target_size]\n",
+    "        encoder_input_values = encoder_input_dataset[i-history:i]\n",
+    "        decoder_input_values = decoder_input_dataset[i:i+target_size]\n",
+    "        decoder_target_values = decoder_target_dataset[i+1:i+1+target_size]\n",
+    "        decoder_missing_values = decoder_missing_dataset[i+1:i+1+target_size]\n",
     "        \n",
-    "        # If we are building a test/validation set and any of the \n",
-    "        # target values has been imputed, then we discard the sample\n",
-    "        if mode == 'evaluating' and np.any(decoder_output[:, 1] == 1):\n",
+    "        # If any of the target values has been imputed (i.e. was missing), skip the sample\n",
+    "        if np.any(decoder_missing_values == 1):\n",
     "            continue\n",
     "            \n",
-    "        encoder_input_data.append(encoder_input)\n",
-    "        decoder_input_data.append(decoder_input)\n",
-    "        decoder_target_data.append(decoder_output)\n",
+    "        encoder_input_data.append(encoder_input_values)\n",
+    "        decoder_input_data.append(decoder_input_values)\n",
+    "        decoder_target_data.append(decoder_target_values)\n",
     "\n",
     "    encoder_input_data = np.array(encoder_input_data).reshape(-1, \n",
     "                                                              history, \n",
@@ -328,23 +75,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_encoder_input_data, train_decoder_input_data, train_decoder_target_data = \\\n",
-    "        build_seq2seq_datasets(df_train, mode='training')\n",
+    "        build_seq2seq_datasets(df_train)\n",
     "\n",
     "valid_encoder_input_data, valid_decoder_input_data, valid_decoder_target_data = \\\n",
-    "        build_seq2seq_datasets(df_valid, mode='evaluating')\n",
+    "        build_seq2seq_datasets(df_valid)\n",
     "\n",
     "test_encoder_input_data, test_decoder_input_data, test_decoder_target_data = \\\n",
-    "        build_seq2seq_datasets(df_test, mode='evaluating')"
+    "        build_seq2seq_datasets(df_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
