--- a/12. modeling.ipynb
+++ b/12. modeling.ipynb
@@ -125,8 +125,7 @@
     "Ty, decoder_input_dim = (train_decoder_input_data.shape[1], \n",
     "                         train_decoder_input_data.shape[2])\n",
     "\n",
-    "# we are predicting the pollution only, leave out the mask\n",
-    "decoder_output_dim = 1  "
+    "decoder_output_dim = train_decoder_target_data.shape[2]"
    ]
   },
   {
@@ -137,7 +136,7 @@
    "source": [
     "batch_size = 64\n",
     "epochs = 250\n",
-    "max_trials = 1500\n",
+    "max_trials = 1000\n",
     "executions_per_trial = 1\n",
     "patience = 20"
    ]
