--- a/12. modeling.ipynb
+++ b/12. modeling.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Google Colab utils"
+    "## Google Colab utils"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install keras-tuner"
+    "!pip install keras-tuner"
    ]
   },
   {
@@ -22,50 +22,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # memory footprint support libraries/code\n",
-    "# !ln -sf /opt/bin/nvidia-smi /usr/bin/nvidia-smi\n",
-    "# !pip install gputil\n",
-    "# !pip install psutil\n",
-    "# !pip install humanize\n",
-    "# import psutil\n",
-    "# import humanize\n",
-    "# import os\n",
-    "# import GPUtil as GPU\n",
-    "# GPUs = GPU.getGPUs()\n",
-    "# # XXX: only one GPU on Colab and isn’t guaranteed\n",
-    "# gpu = GPUs[0]\n",
-    "# def printm():\n",
-    "#  process = psutil.Process(os.getpid())\n",
-    "#  print(\"Gen RAM Free: \" + humanize.naturalsize( psutil.virtual_memory().available ), \" | Proc size: \" + humanize.naturalsize( process.memory_info().rss))\n",
-    "#  print(\"GPU RAM Free: {0:.0f}MB | Used: {1:.0f}MB | Util {2:3.0f}% | Total {3:.0f}MB\".format(gpu.memoryFree, gpu.memoryUsed, gpu.memoryUtil*100, gpu.memoryTotal))\n",
-    "# printm() "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!kill -9 -1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from google.colab import drive\n",
-    "# drive.mount('/gdrive')\n",
-    "# %cd \"/gdrive/My Drive/air-pollution\""
+    "from google.colab import drive\n",
+    "drive.mount('/gdrive')\n",
+    "%cd \"/gdrive/My Drive/air-pollution\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Modeling"
+    "## Modeling"
    ]
   },
   {
@@ -138,7 +104,7 @@
     "epochs = 250\n",
     "max_trials = 1000\n",
     "executions_per_trial = 1\n",
-    "patience = 20"
+    "patience = 10"
    ]
   },
   {
