--- a/12. modeling.ipynb
+++ b/12. modeling.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Google Colab utils"
+    "## Google Colab utils\n",
+    "## *Don't forget to set GPU*"
    ]
   },
   {
@@ -101,10 +102,10 @@
    "outputs": [],
    "source": [
     "batch_size = 64\n",
-    "epochs = 250\n",
-    "max_trials = 1000\n",
+    "epochs = 150\n",
+    "max_trials = 1500\n",
     "executions_per_trial = 1\n",
-    "patience = 10"
+    "patience = 15"
    ]
   },
   {
@@ -152,7 +153,8 @@
     "             epochs=epochs,\n",
     "             callbacks=[EarlyStopping(monitor='val_loss', \n",
     "                                      patience=patience, \n",
-    "                                      verbose=1)])"
+    "                                      verbose=1)]\n",
+    "            )"
    ]
   },
   {
@@ -178,8 +180,10 @@
    "outputs": [],
    "source": [
     "# due to the model architecture, we need to transform the output shape and type\n",
-    "train_attentive_decoder_target_data = list(np.swapaxes(train_decoder_target_data, 0, 1))\n",
-    "valid_attentive_decoder_target_data = list(np.swapaxes(valid_decoder_target_data, 0, 1))"
+    "train_attentive_decoder_target_data = list(np.swapaxes(\n",
+    "                                              train_decoder_target_data, 0, 1))\n",
+    "valid_attentive_decoder_target_data = list(np.swapaxes(\n",
+    "                                              valid_decoder_target_data, 0, 1))"
    ]
   },
   {
@@ -198,6 +202,13 @@
     "                     executions_per_trial=executions_per_trial,\n",
     "                     directory='local-keras-tuner', \n",
     "                     project_name='attentive')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**If an epoch takes 3+ minutes, you probably forgot to set GPU :)**"
    ]
   },
   {
