Removed PM25 from decoder inputs, discarded stacked encoder architecture for the standard model

--- a/11. Generating third order datasets.ipynb
+++ b/11. Generating third order datasets.ipynb
@@ -37,7 +37,8 @@
     "    \n",
     "    # Selecting the appropriate columns from the dataset\n",
     "    encoder_input_dataset = dataset.values.copy()\n",
-    "    decoder_input_dataset = dataset.drop(['PM10_missing', 'PM25_missing'], axis=1).values.copy()\n",
+    "    decoder_input_dataset = dataset.drop(['PM25', 'PM10_missing', 'PM25_missing'],\n",
+    "                                         axis=1).values.copy()\n",
     "    decoder_target_dataset = dataset[['PM10']].values.copy()\n",
     "    decoder_missing_dataset = dataset[['PM10_missing']].values.copy()\n",
     "\n",
