--- a/12. modeling.ipynb
+++ b/12. modeling.ipynb
@@ -105,7 +105,7 @@
     "epochs = 150\n",
     "max_trials = 1500\n",
     "executions_per_trial = 1\n",
-    "patience = 15"
+    "patience = 10"
    ]
   },
   {
@@ -130,7 +130,7 @@
     "                     objective='val_loss',\n",
     "                     max_trials=max_trials,\n",
     "                     executions_per_trial=executions_per_trial,\n",
-    "                     directory='local-keras-tuner', \n",
+    "                     directory='keras-tuner', \n",
     "                     project_name='standard')"
    ]
   },
@@ -200,7 +200,7 @@
     "                     objective='val_loss',\n",
     "                     max_trials=max_trials,\n",
     "                     executions_per_trial=executions_per_trial,\n",
-    "                     directory='local-keras-tuner', \n",
+    "                     directory='keras-tuner', \n",
     "                     project_name='attentive')"
    ]
   },
@@ -243,6 +243,13 @@
    "source": [
     "tuner.results_summary()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
