--- a/13. evaluating.ipynb
+++ b/13. evaluating.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,8 @@
     "\n",
     "test_encoder_input_data = np.load('./data/third-order/Centar/test_encoder_input_data.npy')\n",
     "test_decoder_input_data = np.load('./data/third-order/Centar/test_decoder_input_data.npy')\n",
-    "test_decoder_target_data = np.load('./data/third-order/Centar/test_decoder_target_data.npy')"
+    "test_decoder_target_data = np.load('./data/third-order/Centar/test_decoder_target_data.npy')\n",
+    "test_decoder_target_data = test_decoder_target_data.flatten()"
    ]
   },
   {
@@ -110,14 +111,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:Entity <function standard_lstm at 0x7f865f5dc488> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: converting <function standard_lstm at 0x7f865f5dc488>: AttributeError: module 'gast' has no attribute 'Num'\n",
-      "WARNING: Entity <function standard_lstm at 0x7f865f5dc488> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: converting <function standard_lstm at 0x7f865f5dc488>: AttributeError: module 'gast' has no attribute 'Num'\n",
-      "WARNING:tensorflow:Entity <function cudnn_lstm at 0x7f865f5dc510> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: converting <function cudnn_lstm at 0x7f865f5dc510>: AttributeError: module 'gast' has no attribute 'Num'\n",
-      "WARNING: Entity <function cudnn_lstm at 0x7f865f5dc510> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: converting <function cudnn_lstm at 0x7f865f5dc510>: AttributeError: module 'gast' has no attribute 'Num'\n",
-      "WARNING:tensorflow:Entity <function standard_lstm at 0x7f865f5dc488> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: converting <function standard_lstm at 0x7f865f5dc488>: AttributeError: module 'gast' has no attribute 'Num'\n",
-      "WARNING: Entity <function standard_lstm at 0x7f865f5dc488> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: converting <function standard_lstm at 0x7f865f5dc488>: AttributeError: module 'gast' has no attribute 'Num'\n",
-      "WARNING:tensorflow:Entity <function cudnn_lstm at 0x7f865f5dc510> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: converting <function cudnn_lstm at 0x7f865f5dc510>: AttributeError: module 'gast' has no attribute 'Num'\n",
-      "WARNING: Entity <function cudnn_lstm at 0x7f865f5dc510> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: converting <function cudnn_lstm at 0x7f865f5dc510>: AttributeError: module 'gast' has no attribute 'Num'\n"
+      "WARNING:tensorflow:Entity <function standard_lstm at 0x7f9874d0f488> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: converting <function standard_lstm at 0x7f9874d0f488>: AttributeError: module 'gast' has no attribute 'Num'\n",
+      "WARNING: Entity <function standard_lstm at 0x7f9874d0f488> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: converting <function standard_lstm at 0x7f9874d0f488>: AttributeError: module 'gast' has no attribute 'Num'\n",
+      "WARNING:tensorflow:Entity <function cudnn_lstm at 0x7f9874d0f510> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: converting <function cudnn_lstm at 0x7f9874d0f510>: AttributeError: module 'gast' has no attribute 'Num'\n",
+      "WARNING: Entity <function cudnn_lstm at 0x7f9874d0f510> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: converting <function cudnn_lstm at 0x7f9874d0f510>: AttributeError: module 'gast' has no attribute 'Num'\n",
+      "WARNING:tensorflow:Entity <function standard_lstm at 0x7f9874d0f488> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: converting <function standard_lstm at 0x7f9874d0f488>: AttributeError: module 'gast' has no attribute 'Num'\n",
+      "WARNING: Entity <function standard_lstm at 0x7f9874d0f488> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: converting <function standard_lstm at 0x7f9874d0f488>: AttributeError: module 'gast' has no attribute 'Num'\n",
+      "WARNING:tensorflow:Entity <function cudnn_lstm at 0x7f9874d0f510> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: converting <function cudnn_lstm at 0x7f9874d0f510>: AttributeError: module 'gast' has no attribute 'Num'\n",
+      "WARNING: Entity <function cudnn_lstm at 0x7f9874d0f510> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: converting <function cudnn_lstm at 0x7f9874d0f510>: AttributeError: module 'gast' has no attribute 'Num'\n"
      ]
     }
    ],
@@ -184,14 +185,14 @@
      "output_type": "stream",
      "text": [
       "Train on 60677 samples, validate on 3388 samples\n",
-      "   64/60677 [..............................] - ETA: 13:52 - loss: 0.8072WARNING:tensorflow:Method (on_train_batch_end) is slow compared to the batch update (0.155071). Check your callbacks.\n",
-      "60677/60677 [==============================] - 27s 448us/sample - loss: 0.1439 - val_loss: 0.0538\n"
+      "   64/60677 [..............................] - ETA: 27:42 - loss: 1.0787WARNING:tensorflow:Method (on_train_batch_end) is slow compared to the batch update (0.211889). Check your callbacks.\n",
+      "60677/60677 [==============================] - 68s 1ms/sample - loss: 0.1497 - val_loss: 0.0528\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7f8655523748>"
+       "<tensorflow.python.keras.callbacks.History at 0x7f986ac56748>"
       ]
      },
      "execution_count": 7,
@@ -208,7 +209,7 @@
     "            valid_decoder_input_data],\n",
     "            valid_decoder_target_data),\n",
     "          batch_size=batch_size,\n",
-    "          epochs=1,\n",
+    "          epochs=epochs,\n",
     "          callbacks=[EarlyStopping(monitor='val_loss', \n",
     "                                  patience=patience, \n",
     "                                  verbose=1),\n",
@@ -248,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +282,7 @@
     "    # in case there is a next timestep to be processed.\n",
     "    if t < Ty - 1:\n",
     "        x = Lambda(lambda z: z[:, t+1, 1:])(decoder_inputs)\n",
-    "        x = Concatenate(axis=-1)([x, out])\n",
+    "        x = Concatenate(axis=-1)([out, xx])\n",
     "        x = K.expand_dims(x, axis=1)\n",
     "\n",
     "model = Model(inputs=[encoder_inputs, decoder_inputs], \n",
@@ -292,11 +293,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = model.predict([test_encoder_input_data, test_decoder_input_data])"
+    "def reformat_model_output(y_pred):\n",
+    "    y_pred = np.array(y_pred)\n",
+    "    y_pred = np.swapaxes(y_pred, 0, 1)\n",
+    "    y_pred = y_pred.flatten()\n",
+    "    return y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = model.predict([test_encoder_input_data, test_decoder_input_data])\n",
+    "y_pred = reformat_model_output(y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.48393303"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loss = K.eval(tf.keras.losses.mean_squared_error(test_decoder_target_data, y_pred))\n",
+    "loss"
    ]
   },
   {
